# libwebrtc

./: *  .gitignore  .gn  .vpython  .vpython3  AUTHORS  BUILD.gn  DEPS  LICENSE_THIRD_PARTY  OWNERS  PRESUBMIT.py  README.md  THIRD_PARTY_DEPS  WATCHLISTS  abseil-in-webrtc.md  api_list.py  binary-size.config  buildbucket.config  code-owners.config  codereview.settings  commit-queue.cfg  common_types.cc  common_types.h  config.star  cr-buildbucket.cfg  deps_clear_hook.py  groups  luci-milo.cfg  luci-notify.cfg  luci-scheduler.cfg  native-api.md  olov_test  project.cfg  project.config  pylintrc  realms.cfg  style-guide.md  typedefs.h  webrtc.gni  webrtc_lib_link_test.cc  (+1 more)
api/: BUILD.gn  (+143 more)
api/adaptation/: BUILD.gn  DEPS  resource.cc  resource.h  resource_unittest.cc  video_source_restrictions.cc  video_source_restrictions.h  video_source_restrictions_unittest.cc  video_stream_input_state.cc  video_stream_input_state.h
api/adaptation/test/: fake_resource.cc  fake_resource.h
api/field_trial/: BUILD.gn  DEPS  trial_parser.h
api/test/metrics/: BUILD.gn  chrome_perf_dashboard_metrics_exporter.cc  chrome_perf_dashboard_metrics_exporter_test.cc  metrics_logger_and_exporter.cc  metrics_logger_and_exporter.h  metrics_logger_and_exporter_test.cc
api/test/numerics/: BUILD.gn  math_utils.h  running_statistics.h  running_statistics_unittest.cc  samples_stats_counter.cc  samples_stats_counter.h  samples_stats_counter_unittest.cc
api/units/: BUILD.gn  data_rate.cc  data_rate.h  data_rate.h.autosave  data_rate_unittest.cc  data_size.cc  data_size.h  data_size_unittest.cc  frequency_unittest.cc  time_delta.cc  time_delta.h  timestamp.cc  timestamp.h  timestamp_unittest.cc  unit_base.h  unit_base_unittest.cc
api/video/: BUILD.gn  DEPS  builtin_video_bitrate_allocator_factory.cc  encoded_frame.cc  encoded_frame.h  encoded_image.cc  encoded_image.h  hdr_metadata.h  i010_buffer.cc  i010_buffer.h  i410_buffer.cc  i420_buffer.cc  i420_buffer.h  nv12_buffer.cc  nv12_buffer.h  planar_buffer_factory.cc  planar_buffer_factory.h  render_resolution.h  rtp_video_frame_assembler.cc  rtp_video_frame_assembler_unittests.cc  video_bitrate_allocation.h  video_bitrate_allocator.cc  video_bitrate_allocator.h  video_bitrate_allocator_factory.h  video_codec_type.h  video_content_type.cc  video_frame.cc  video_frame.h  video_frame_buffer.cc  video_frame_buffer.h  video_frame_encoded_frame.cc  video_frame_metadata.cc  video_frame_metadata.h  video_layers_allocation.h  video_sink_interface.h  video_source_interface.h  video_stream_decoder_create.cc  video_stream_encoder_create.cc  video_stream_encoder_interface.h  video_stream_encoder_observer.h  (+3 more)
api/video/test/: BUILD.gn  i410_buffer_unittest.cc  mock_video_stream_encoder_observer.h  nv12_buffer_unittest.cc
api/voip/: BUILD.gn  DEPS  audio_channel.cc  audio_channel.h  audio_egress.cc  audio_egress.h  audio_ingress.cc  audio_ingress.h  mock_voip_engine.h  voip_base.h  voip_channel.h  voip_codec.h  voip_core.cc  voip_core.h  voip_dtmf.h  voip_engine.h  voip_engine_builder.cc  voip_engine_builder.h  voip_engine_factory.h  voip_network.h  voip_statistics.h  voip_volume_control.h
api/voip/test/: BUILD.gn  audio_channel_unittest.cc  audio_egress_unittest.cc  (+3 more)
crypto/: BUILD.gn  fakesslidentity.cc  fakesslidentity.h  hkdf.cc  hkdf.h  hkdf_unittest.cc  messagedigest.cc  messagedigest_unittest.cc  openssladapter.cc  openssladapter.h  openssladapter_unittest.cc  opensslcertificate.cc  opensslcertificate.h  openssldigest.cc  openssldigest.h  opensslidentity.cc  opensslidentity.h  opensslsessioncache.cc  opensslsessioncache.h  opensslsessioncache_unittest.cc  opensslstreamadapter.cc  opensslstreamadapter.h  opensslutility.cc  opensslutility.h  opensslutility_unittest.cc  rtccertificate.cc  rtccertificate.h  rtccertificate_unittest.cc  rtccertificategenerator.cc  rtccertificategenerator.h  rtccertificategenerator_unittest.cc  ssladapter.cc  ssladapter.h  ssladapter_unittest.cc  sslcertificate.cc  sslcertificate.h  sslfingerprint.cc  sslfingerprint.h  sslidentity.cc  sslidentity.h  (+5 more)
logging/log_writer/: BUILD.gn  file_log_writer.cc  file_log_writer.h  log_writer.cc  log_writer.h  memory_log_writer.cc  memory_log_writer.h
media_transport/: BUILD.gn
media_transport/test/: fake_media_transport.h
modules/utility/: BUILD.gn
rtc_base/streams/: BUILD.gn  pipes.cc  pipes.h  readable_stream.cc  readable_stream.h  sink_controller.h  source_controller.h  stream.cc  stream.h  streams_unittest.cc  transform_stream.cc  transform_stream.h  transform_stream_unittest.cc  underlying_sink.cc  underlying_sink.h  underlying_source.cc  underlying_source.h  underlying_transform.cc  underlying_transform.h  underlying_transformer.cc  underlying_transformer.h  writable_stream.cc  writable_stream.h
rtc_base/task_utils/: BUILD.gn  inline_task_queue.cc  inline_task_queue.h  inline_task_queue_unittest.cc  pending_task_safety_flag.cc  pending_task_safety_flag.h  pending_task_safety_flag_unittest.cc  repeated_task.cc  repeated_task.h  repeated_task_unittest.cc  repeating_task.cc  repeating_task.h  repeating_task_unittest.cc  task_queue_factory_with_fake_time.cc  task_queue_factory_with_fake_time.h  to_queued_task.h  tracking_task_queue_factory_proxy.cc  tracking_task_queue_factory_proxy.h  tracking_task_queue_proxy.cc  tracking_task_queue_proxy.h
rtc_crypto/: BUILD.gn  hkdf.cc  hkdf.h  hkdf_unittest.cc
stats/data/: BUILD.gn  DEPS  report_block_data.h
test/rtc_task_runner/: BUILD.gn  default_task_runner.cc  default_task_runner.h  default_task_runner_unittest.cc  rtc_task_runner.cc  rtc_task_runner.h  rtc_task_runner_interfaces.h  time_simulation.cc  time_simulation.h  time_simulation_unittest.cc
test/task_runner/: BUILD.gn  default_task_runner.cc  default_task_runner.h  default_task_runner_unittest.cc  task_runner.cc  task_runner.h  task_runner_interface.h  time_simulation.cc  time_simulation.h  time_simulation_unittest.cc
tools_webrtc/perf/: BUILD.gn  catapult_uploader.py  webrtc_dashboard_upload.py  webrtc_upload_dashboard2.py
video/deprecated/: BUILD.gn  call_stats.cc  call_stats.h
(+5706 files in other folders)
