# Copyright (c) 2015 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../webrtc.gni")

rtc_library("resource_adaptation_api") {
  visibility = [ "*" ]
  sources = [
    "resource.cc",
    "resource.h",
    "video_source_restrictions.cc",
    "video_source_restrictions.h",
    "video_stream_input_state.cc",
    "video_stream_input_state.h",
  ]

  deps = [
    "..:scoped_refptr",
    "../../rtc_base:checks",
    "../../rtc_base:rtc_base_approved",
    "../../rtc_base:rtc_task_queue",
    "../video:video_frame",
    "../video_codecs:video_codecs_api",
    "//third_party/abseil-cpp/absl/algorithm:container",
    "//third_party/abseil-cpp/absl/types:optional",
  ]
}

if (rtc_include_tests) {
  rtc_library("resource_adaptation_api_test_utilities") {
    testonly = true

    sources = [
      "test/fake_resource.cc",
      "test/fake_resource.h",
    ]

    deps = [
      ":resource_adaptation_api",
      "../../rtc_base:refcount",
    ]
  }

  rtc_library("resource_adaptation_api_unittests") {
    testonly = true

    sources = [
      "resource_unittest.cc",
      "video_source_restrictions_unittest.cc",
    ]

    deps = [
      ":resource_adaptation_api",
      ":resource_adaptation_api_test_utilities",
      "../../api:scoped_refptr",
      "../../api/task_queue:default_task_queue_factory",
      "../../api/task_queue:task_queue",
      "../../rtc_base:checks",
      "../../rtc_base:rtc_base_approved",
      "../../rtc_base:rtc_task_queue",
      "../../rtc_base:task_queue_for_test",
      "../../test:test_support",
      "//third_party/abseil-cpp/absl/types:optional",
    ]
  }
}
