# Copyright(c) 2020 The WebRTC project authors.All Rights Reserved.
#
# Use of this source code is governed by a BSD - style license
# that can be found in the LICENSE file in the root of the source
# tree.An additional intellectual property rights grant can be found
# in the file PATENTS.All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../webrtc.gni")

rtc_source_set("resource_adaptation_api") {
  visibility = [ "*" ]
  sources = [
    "resource.cc",
    "resource.h",
    "video_source_restrictions.cc",
    "video_source_restrictions.h",
  ]
  deps = [
    "../../api:scoped_refptr",
    "../../api/video:video_frame",
    "../../api/video_codecs:video_codecs_api",
    "../../rtc_base:checks",
    "../../rtc_base:rtc_base_approved",
    "//third_party/abseil-cpp/absl/algorithm:container",
    "//third_party/abseil-cpp/absl/types:optional",
  ]
}

if (rtc_include_tests) {
  rtc_library("resource_adaptation_api_unittests") {
    testonly = true
    sources = [ "video_source_restrictions_unittest.cc" ]
    deps = [
      ":resource_adaptation_api",
      "../../rtc_base:rtc_base_approved",
      "../../test:test_support",
    ]
  }
}
