# Copyright (c) 2018 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../webrtc.gni")

rtc_source_set("video_frame") {
  visibility = [ "*" ]
}

rtc_source_set("video_frame_i420") {
  visibility = [ "*" ]
}

rtc_source_set("encoded_frame") {
  visibility = [ "*" ]
}

rtc_source_set("video_bitrate_allocation") {
  visibility = [ "*" ]
}

rtc_source_set("video_stream_decoder") {
  visibility = [ "*" ]
}

rtc_source_set("video_stream_decoder_create") {
  visibility = [ "*" ]
}
