# Copyright (c) 2014 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../webrtc.gni")

rtc_library("utility") {
  visibility = [ "*" ]

  if (is_android) {
    sources = [
      "include/helpers_android.h",
      "include/jvm_android.h",
      "source/helpers_android.cc",
      "source/jvm_android.cc",
    ]
  }

  if (is_ios) {
    frameworks = [ "AVFoundation.framework" ]
  }

  deps = [
    "../../api:sequence_checker",
    "../../rtc_base:checks",
    "../../rtc_base:event_tracer",
    "../../rtc_base:location",
    "../../rtc_base:logging",
    "../../rtc_base:platform_thread",
    "../../rtc_base:rtc_event",
    "../../rtc_base:timeutils",
    "../../rtc_base/system:arch",
    "../../system_wrappers",
  ]
}
