# Copyright (c) 2019 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../webrtc.gni")

if (is_android) {
  import("//build/config/android/config.gni")
  import("//build/config/android/rules.gni")
}

rtc_library("streams") {
  sources = [
    "readable_stream.cc",
    "readable_stream.h",
    "sink_controller.h",
    "source_controller.h",
    "stream.cc",
    "stream.h",
    "transform_stream.h",
    "writable_stream.cc",
    "writable_stream.h",
  ]

  deps = [
    "../../api:array_view",
    "../../rtc_base:checks",
  ]
}

rtc_library("streams_unittests") {
  testonly = true

  sources = [
    "streams_unittest.cc",
  ]

  deps = [
    ":streams",
    "../../api:array_view",
    "../../test:test_main",
    "../../test:test_support",
  ]
}
