# Copyright (c) 2019 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../webrtc.gni")

if (is_android) {
  import("//build/config/android/config.gni")
  import("//build/config/android/rules.gni")
}

rtc_library("streams") {
  sources = [
    "pipes.cc",
    "pipes.h",
    "readable_stream.cc",
    "readable_stream.h",
    "sink_controller.h",
    "source_controller.h",
    "stream.cc",
    "stream.h",
    "transform_stream.h",
    "underlying_sink.cc",
    "underlying_sink.h",
    "underlying_source.cc",
    "underlying_source.h",
    "underlying_transformer.cc",
    "underlying_transformer.h",
    "writable_stream.cc",
    "writable_stream.h",
  ]

  deps = [
    "../../api:array_view",
    "../../rtc_base:checks",
    "//third_party/abseil-cpp/absl/types:variant",
  ]
}

rtc_library("test_support") {
  testonly = true

  sources = [
    "test/actions.h",
    "test/mock_underlying_sink.h",
    "test/mock_underlying_source.h",
    "test/mock_underlying_transformer.h",
  ]

  deps = [
    ":streams",
    "../../test:test_support",
  ]
}

rtc_library("streams_unittests") {
  testonly = true

  sources = [
    "streams_unittest.cc",
    "transform_stream_unittest.cc",
  ]

  deps = [
    ":streams",
    ":test_support",
    "../../api:array_view",
    "../../test:test_main",
    "../../test:test_support",
  ]
}
