# Copyright (c) 2019 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../webrtc.gni")

rtc_source_set("rtc_task_runner_interfaces") {
  sources = [
    "rtc_task_runner_interfaces.h",
  ]
  deps = [
    "../../api/task_queue",
    "../../api/units:time_delta",
    "../../api/units:timestamp",
    "../../rtc_base",
    "../../rtc_base:sequenced_task_checker",
    "../../system_wrappers",
    "//third_party/abseil-cpp/absl/memory",
    "//third_party/abseil-cpp/absl/strings",
  ]
}
rtc_source_set("default_task_runner") {
  sources = [
    "default_task_runner.cc",
    "default_task_runner.h",
  ]
  deps = [
    ":rtc_task_runner_interfaces",
    "../../api/task_queue",
    "../../api/units:time_delta",
    "../../api/units:timestamp",
    "../../rtc_base",
    "../../rtc_base:rtc_task_queue_api",
    "../../rtc_base:sequenced_task_checker",
    "../../system_wrappers",
    "//third_party/abseil-cpp/absl/memory",
    "//third_party/abseil-cpp/absl/strings",
  ]
}

rtc_source_set("rtc_task_runner") {
  sources = [
    "rtc_task_runner.cc",
    "rtc_task_runner.h",
  ]
  deps = [
    ":rtc_task_runner_interfaces",
    "../../api/task_queue",
    "../../api/units:time_delta",
    "../../api/units:timestamp",
    "../../rtc_base:rtc_base",
    "../../rtc_base:sequenced_task_checker",
    "//third_party/abseil-cpp/absl/memory",
    "//third_party/abseil-cpp/absl/strings",
  ]
}

if (rtc_include_tests) {
  rtc_source_set("time_simulation") {
    testonly = true
    sources = [
      "time_simulation.cc",
      "time_simulation.h",
    ]
    deps = [
      ":rtc_task_runner_interfaces",
      "../../api/task_queue",
      "../../api/units:time_delta",
      "../../api/units:timestamp",
      "../../rtc_base",
      "../../rtc_base:rtc_base_tests_utils",
      "../../rtc_base:sequenced_task_checker",
      "../../system_wrappers",
      "//third_party/abseil-cpp/absl/memory",
      "//third_party/abseil-cpp/absl/strings",
    ]
  }
  rtc_source_set("task_runner_unittests") {
    testonly = true
    sources = [
      "default_task_runner_unittest.cc",
      "time_simulation_unittest.cc",
    ]
    deps = [
      ":default_task_runner",
      ":rtc_task_runner",
      ":time_simulation",
      "../:test_support",
      "../../rtc_base:rtc_base_approved",
      "//third_party/abseil-cpp/absl/memory",
    ]
  }
}
