# Copyright (c) 2019 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../webrtc.gni")

rtc_source_set("task_runner_interface") {
  sources = [
    "task_runner_interface.h",
  ]
  deps = [
    "../../api/task_queue",
    "../../api/units:time_delta",
    "../../api/units:timestamp",
    "../../rtc_base",
    "../../rtc_base:sequenced_task_checker",
    "//third_party/abseil-cpp/absl/memory",
    "//third_party/abseil-cpp/absl/strings",
  ]
}
rtc_source_set("default_task_runner") {
  sources = [
    "default_task_runner.cc",
    "default_task_runner.h",
  ]
  deps = [
    ":task_runner_interface",
    "../../api/task_queue",
    "../../api/units:time_delta",
    "../../api/units:timestamp",
    "../../rtc_base",
    "../../rtc_base:rtc_task_queue_api",
    "../../rtc_base:sequenced_task_checker",
    "//third_party/abseil-cpp/absl/memory",
    "//third_party/abseil-cpp/absl/strings",
  ]
}

rtc_source_set("task_runner") {
  sources = [
    "task_runner.cc",
    "task_runner.h",
  ]
  deps = [
    ":default_task_runner",
    ":task_runner_interface",
    "../../api/task_queue",
    "../../api/units:time_delta",
    "../../api/units:timestamp",
    "../../rtc_base:rtc_base",
    "../../rtc_base:sequenced_task_checker",
    "//third_party/abseil-cpp/absl/memory",
    "//third_party/abseil-cpp/absl/strings",
  ]
}

if (rtc_include_tests) {
  rtc_source_set("time_simulation") {
    testonly = true
    sources = [
      "time_simulation.cc",
      "time_simulation.h",
    ]
    deps = [
      ":task_runner_interface",
      "../../api/task_queue",
      "../../api/units:time_delta",
      "../../api/units:timestamp",
      "../../rtc_base",
      "../../rtc_base:rtc_base_tests_utils",
      "../../rtc_base:sequenced_task_checker",
      "../../system_wrappers",
      "//third_party/abseil-cpp/absl/memory",
      "//third_party/abseil-cpp/absl/strings",
    ]
  }
}
